--- a/projets2appli/projets2appli/projets2appli.vcxproj
+++ b/projets2appli/projets2appli/projets2appli.vcxproj
@@ -141,9 +141,14 @@
   <ItemGroup>
     <ClCompile Include="appliS2.cpp" />
     <ClCompile Include="fish.cpp" />
+    <ClCompile Include="menu.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="coordinates.h" />
     <ClInclude Include="fish.h" />
+    <ClInclude Include="grid.h" />
+    <ClInclude Include="leaderboards.h" />
+    <ClInclude Include="menu.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
